# langgraph-temporal-demo

./: .env.example  DEPLOYMENT.md  Makefile  README.md  docker-compose.yml
db/: chinook.sql
docker/: backend.Dockerfile  frontend.Dockerfile  langgraph.Dockerfile  nginx-default.conf.template  postgres.Dockerfile  temporal.Dockerfile  web-entrypoint.sh
python/: api.py  config.py  worker.py
python-langchain/: README.md  api.py  approve.py  config.py  prompts.py  pyproject.toml  starter.py
python-langchain-temporal/: README.md  api.py  approve.py  config.py  db.py  pyproject.toml  starter.py  worker.py
python-langchain-temporal/activities/: llm.py  tools.py
python-langchain-temporal/graph/: __init__.py  agent.py
python-langchain-temporal/workflows/: __init__.py  agent.py
python-langchain/activities/: llm.py  tools.py
python-langchain/graph/: __init__.py  agent.py
python-langchain/models/: types.py
python-langgraph/: README.md  api.py  checkpointing.py  pyproject.toml  starter.py
python-langgraph-temporal/: README.md  api.py  config.py  db.py  worker.py
python-langgraph-temporal/activities/: llm.py  tools.py
python-langgraph-temporal/graph/: agent.py
python-langgraph-temporal/tests/: test_api.py  test_hitl.py  test_llm.py  test_tools.py  test_workflow_hitl.py
python-langgraph-temporal/workflows/: agent.py
python-langgraph/activities/: llm.py  tools.py
python-langgraph/graph/: __init__.py  agent.py
python-langgraph/tests/: test_api.py  test_approval.py  test_postgres_checkpoint.py
web/: README.md  app.js  config.js  index.html
(+11 files in other folders)
