[project]
name = "support-agent-temporal-langgraph"
version = "0.1.0"
description = "Temporal-backed LangGraph ReAct support agent"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.69",
    "openai>=1.60",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "langchain-core>=1.4.8",
    "langchain-anthropic>=1.4.8",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.8",
    "temporalio[langgraph]>=1.27",
]
